WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13685
REGRESSION (
r21368
-
r21388
): Highlighting text in scrolled textareas behaves oddly
https://bugs.webkit.org/show_bug.cgi?id=13685
Summary
REGRESSION (r21368-r21388): Highlighting text in scrolled textareas behaves o...
David Kilzer (:ddkilzer)
Reported
2007-05-11 17:39:35 PDT
* SUMMARY When highlighting text in a scrolled textarea element, the text itself is not highlighted initially during either mouse drags or shift-arrow-key movements. * STEPS TO REPRODUCE 1. Open Safari/WebKit. 2. Open the soon-to-be-attached test case. 3. Scroll the textarea down so that at least half of it is not blank lines. 4. Position the mouse pointer to the right of any text. 5. Click-and-hold, then move the mouse up and down. 6. Click once to the right of the text to position the cursor at the end of a line of text. 7. Holding the Shift key down, use the arrow keys to create a highlight region. * EXPECTED RESULTS Text should be highlighted when it's supposed to be highlighted. * ACTUAL RESULTS Text is not highlighted when it's supposed to be highlighted. * REGRESSION This is a recent (last 24-48 hours) regression in ToT WebKit as well as from shipping Safari. * NOTES - Tested with a local debug build of WebKit
r21422
with Safari 2.0.4 (419.3) on Mac OS X 10.4.9 (8P135).
Attachments
Test case
(433 bytes, text/html)
2007-05-11 17:41 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Patch
(12.83 KB, patch)
2007-05-12 03:55 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2007-05-11 17:41:00 PDT
Created
attachment 14498
[details]
Test case Could probably be reduced further. I just copied/pasted HTML source from a Yahoo! Mail reply page (which is where I first saw the issue).
mitz
Comment 2
2007-05-12 01:14:37 PDT
Looks like a bug that has been fixed once, where the scroll offset was not factored into repaint rect computation.
mitz
Comment 3
2007-05-12 01:16:30 PDT
(In reply to
comment #2
)
> Looks like a bug that has been fixed once, where the scroll offset was not > factored into repaint rect computation.
That was
bug 12590
.
mitz
Comment 4
2007-05-12 01:35:56 PDT
Probably regressed in <
http://trac.webkit.org/projects/webkit/changeset/21387
> (fix for <
rdar://problem/4100616
>).
mitz
Comment 5
2007-05-12 03:40:12 PDT
I have a patch (essentially the same as for
bug 13695
), I'm just hunting for an already-failing pixel test so that I don't have to add a new one :)
mitz
Comment 6
2007-05-12 03:55:29 PDT
Created
attachment 14514
[details]
Patch
Darin Adler
Comment 7
2007-05-12 07:43:26 PDT
Comment on
attachment 14514
[details]
Patch r=me
Sam Weinig
Comment 8
2007-05-12 19:35:15 PDT
Landed in
r21435
.
David Kilzer (:ddkilzer)
Comment 9
2007-06-24 12:04:55 PDT
Mass removal of NeedsRadar keyword from my bugs that have already been RESOLVED.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug