LayoutTests:

Reviewed by Darin.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=13685
          REGRESSION (r21368-r21388): Highlighting text in scrolled textareas behaves oddly

        * fast/repaint/text-selection-rect-in-overflow-expected.checksum: Added.
        * fast/repaint/text-selection-rect-in-overflow-expected.png: Added.
        * fast/repaint/text-selection-rect-in-overflow-expected.txt: Added.
        * fast/repaint/text-selection-rect-in-overflow.html: Added.

WebCore:

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13685
          REGRESSION (r21368-r21388): Highlighting text in scrolled textareas behaves oddly

        Test: fast/repaint/text-selection-rect-in-overflow.html

        * rendering/RenderText.cpp:
        (WebCore::RenderText::selectionRect):



Canonical link: https://commits.webkit.org/17879@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@21435 268f45cc-cd09-0410-ab3c-d52691b4dbfc